fixed spacing issues

--- a/managr/client/surveys/questionFormTemplate.css
+++ b/managr/client/surveys/questionFormTemplate.css
@@ -16,7 +16,6 @@
 
 .addBtn {
   width: 20%;
-  margin-top: 2%;
   height: 8%;
   margin-left: 3%;
 }
