--- a/managr/client/surveys/surveyFormTemplate.css
+++ b/managr/client/surveys/surveyFormTemplate.css
@@ -9,4 +9,5 @@
 
 .selectionQuestInput {
   margin-left: 2%;
+  margin-bottom: 0px !important;
 }
