--- a/managr/client/surveys/surveys.css
+++ b/managr/client/surveys/surveys.css
@@ -50,6 +50,7 @@ label {
 
 .dropdown {
   margin-left: 2%;
+  margin-bottom: 1.5%;
 }
 
 #xicon {
